Xây dựng lại các API liên quan đến chức năng chat
